# rosmsg_protobuf

./: CMakeLists.txt  README.md  listener.cpp  package.xml  pb_listener.cpp  pb_talker.cpp  talker.cpp
docker/scripts/: ros_docker_into.sh  ros_docker_run.sh
message_serialization/include/ros/: README.md  roscpp_serialization_macros.h  serialization.h  serialization_protobuffer.h  serialized_message.h
message_serialization/src/: serialization.cpp
message_traits/: CMakeLists.txt
message_traits/include/ros/: builtin_message_traits.h  message_event.h  message_forward.h  message_operations.h  message_traits.h  protobuffer_traits.h  service_traits.h
sample_protos/: CMakeLists.txt  publish_info.proto
test/: CMakeLists.txt  README.md  sfinae_test.cc  sfinae_test.h  test_proto.cpp  test_template.cc  test_template.h
test/proto/: CMakeLists.txt  superbai.proto
